test/tests/compiler/14_pointers/invalid_types/multiply_pointers_2.plx
#  It's illegal to multiply, divide, or take the modulo of pointers 
pub fn main(none) i32 {
    x: *i32 = 0
    (false * x)
    return 0
}
